@@ -5647,4 +5647,6 @@ a)"xI
 
 /(?<=(?<=a)b)(?<!abcd)(?<=(?<=a)bcde)/I
 
+/( {32742} {42})(?<!\1{65481})/
+
 # End of testinput2
